crates/weft-snapshots/tests/snapshots/lit-js/corpus-todo-list.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-todo-list as lit-js
---
import { LitElement, html, nothing } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="todos" aria-label="Tasks"
      ><h1 data-weft-id="title">Tasks</h1
      ><form data-weft-id="add-form" @submit=${(_e) => { _e.preventDefault(); _act(actions, { id: "add-form", action: "todo.add" }); }}
        ><div data-weft-id="add-row" style=${styleMap({ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" })}
          ><div data-weft-field=""
            ><label
              ><span aria-hidden="true">New task</span
              ><input data-weft-id="draft" aria-label="New task" type="text" .value=${_text(data?.draft)} @input=${(_e) => onChange?.("$.draft", _e.currentTarget.value)}
            ></label
          ></div
          ><button data-weft-id="add" type="submit" ?disabled=${!_on(data?.draft)} data-variant="primary" @click=${(_e) => { _e.preventDefault(); _act(actions, { id: "add-form", action: "todo.add" }); }}>Add</button
        ></div
      ></form
      ><ul data-weft-id="list">${_list(data?.todos).map((todo, _i0) => html`<li data-weft-id=${"todo[" + _i0 + "]"}
            ><label
              ><input data-weft-id=${"todo-done[" + _i0 + "]"} type="checkbox" aria-label=${(_text(todo?.title).trim()) ?? nothing} .checked=${_on(todo?.done)} @change=${(_e) => onChange?.("$.todos." + _i0 + ".done", _e.currentTarget.checked)}>${_text(todo?.title).trim() ? html`<span aria-hidden="true">${_text(todo?.title).trim()}</span>` : null}</label
            ><button data-weft-id=${"todo-remove[" + _i0 + "]"} type="button" @click=${(_e) => _act(actions, { id: "todo-remove[" + _i0 + "]", action: "todo.remove", item: "$.todos." + _i0 })}>Remove</button
          ></li>`)}</ul
      ><div data-weft-id="summary" style=${styleMap({ gap: "var(--weft-space-xs)", display: "flex", flexDirection: "row", alignItems: "center" })}
        ><div data-weft-id="remaining">${!(_text(data?.remaining).trim() === "") ? _squash(_text(data?.remaining)) : ""}</div
        ><div data-weft-id="remaining-label">items left</div
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
