crates/weft-snapshots/tests/snapshots/lit-js/example-button.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-button as lit-js
---
import { LitElement, html } from "lit";

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Checkout"
      ><button data-weft-id="pay" data-state="idle" type="button" ?disabled=${!_on(data?.cartReady)} data-variant="primary" @click=${(_e) => _act(actions, { id: "pay", action: "order.pay" })}>Pay now</button
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
