crates/weft-snapshots/tests/snapshots/lit-js/example-cell.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-cell as lit-js
---
import { LitElement, html, nothing } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value) {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="root" aria-label="Users">${(() => {
        const _cols = [
          html`<th data-weft-id="col-name" scope="col">Name</th>`,
        ];
        const _rows = [
          html`<tr data-weft-id="row-ana"
              ><td data-weft-id="cell-ana"
                ><div data-weft-id="ana-name">Ana</div>${(() => {
                  const _href = _url("");
                  return html`<a data-weft-id="ana-link" href=${(_href) ?? nothing} role=${(_href === undefined ? "link" : undefined) ?? nothing} tabindex=${(_href === undefined ? 0 : undefined) ?? nothing} @keydown=${_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "ana-link", action: "users.open" }); } : undefined} @click=${() => _act(actions, { id: "ana-link", action: "users.open" })} style=${styleMap({ display: "inline-block" })}>View</a>`;
                })()}</td
            ></tr>`,
        ];
        return html`<table data-weft-id="users" aria-label="Users">${_cols.length > 0 ? html`<thead
                ><tr>${_cols}</tr
              ></thead>` : null}${_rows.length > 0 ? html`<tbody>${_rows}</tbody>` : null}</table>`;
      })()}</main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
